// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the ApdKeyPersonForm component renders correctly 1`] = `
<Fragment>
  <h4
    className="ds-h4"
  >
    Additional Key Personnel
  </h4>
  <p
    className="ds-u-margin-bottom--0"
  >
    Provide the name, email, and role for this key personnel. If applicable, provide the individual's total annual cost (including benefits) and their allocation to the overall project work.
  </p>
  <TextField
    autoFocus={true}
    cy-data="key-person-name-1"
    label="Name"
    name="apd-state-profile-pocname1"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="Bob the Builder"
  />
  <TextField
    cy-data="key-person-email-1"
    label="Email"
    name="apd-state-profile-pocemail1"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="email address"
  />
  <TextField
    cy-data="key-person-role-1"
    label="Role"
    name="apd-state-profile-pocposition1"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="The Builder"
  />
  <fieldset
    className="ds-c-fieldset"
  >
    <legend
      className="ds-c-label"
    >
      Does this person have costs directly attributable to this program?
    </legend>
    <ChoiceComponent
      checked={true}
      checkedChildren={
        <PersonCostForm
          costLabel="Cost with benefits"
          fteLabel="FTE Allocation"
          hint="For example: 0.5 = 0.5 FTE = 50% time"
          items={
            Object {
              "1992": Object {
                "amt": 100,
                "perc": 0.32,
              },
              "1993": Object {
                "amt": 300,
                "perc": 0.57,
              },
            }
          }
          setCost={[Function]}
          setFTE={[Function]}
        />
      }
      label="Yes"
      name="apd-state-profile-hascosts-yes1"
      onChange={[Function]}
      type="radio"
      value="yes"
    />
    <ChoiceComponent
      checked={false}
      label="No"
      name="apd-state-profile-hascosts-no1"
      onChange={[Function]}
      type="radio"
      value="no"
    />
  </fieldset>
</Fragment>
`;

exports[`the ApdKeyPersonForm component renders correctly if the person does not have costs 1`] = `
<Fragment>
  <h4
    className="ds-h4"
  >
    Additional Key Personnel
  </h4>
  <p
    className="ds-u-margin-bottom--0"
  >
    Provide the name, email, and role for this key personnel. If applicable, provide the individual's total annual cost (including benefits) and their allocation to the overall project work.
  </p>
  <TextField
    autoFocus={true}
    cy-data="key-person-name-1"
    label="Name"
    name="apd-state-profile-pocname1"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="Bob the Builder"
  />
  <TextField
    cy-data="key-person-email-1"
    label="Email"
    name="apd-state-profile-pocemail1"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="email address"
  />
  <TextField
    cy-data="key-person-role-1"
    label="Role"
    name="apd-state-profile-pocposition1"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="The Builder"
  />
  <fieldset
    className="ds-c-fieldset"
  >
    <legend
      className="ds-c-label"
    >
      Does this person have costs directly attributable to this program?
    </legend>
    <ChoiceComponent
      checked={false}
      checkedChildren={
        <PersonCostForm
          costLabel="Cost with benefits"
          fteLabel="FTE Allocation"
          hint="For example: 0.5 = 0.5 FTE = 50% time"
          items={
            Object {
              "1992": Object {
                "amt": 100,
                "perc": 0.32,
              },
              "1993": Object {
                "amt": 300,
                "perc": 0.57,
              },
            }
          }
          setCost={[Function]}
          setFTE={[Function]}
        />
      }
      label="Yes"
      name="apd-state-profile-hascosts-yes1"
      onChange={[Function]}
      type="radio"
      value="yes"
    />
    <ChoiceComponent
      checked={true}
      label="No"
      name="apd-state-profile-hascosts-no1"
      onChange={[Function]}
      type="radio"
      value="no"
    />
  </fieldset>
</Fragment>
`;

exports[`the ApdKeyPersonForm component renders correctly if the person is a primary contact 1`] = `
<Fragment>
  <h4
    className="ds-h4"
  >
    Primary APD Point of Contact
  </h4>
  <p
    className="ds-u-margin-bottom--0"
  >
    Personnel listed in this section must be assigned to APD by name, role, time commitment, and cost, where applicable.
  </p>
  <TextField
    autoFocus={true}
    cy-data="key-person-name-0"
    label="Name"
    name="apd-state-profile-pocname0"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="Bob the Builder"
  />
  <TextField
    cy-data="key-person-email-0"
    label="Email"
    name="apd-state-profile-pocemail0"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="email address"
  />
  <TextField
    cy-data="key-person-role-0"
    label="Role"
    name="apd-state-profile-pocposition0"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="The Builder"
  />
  <fieldset
    className="ds-c-fieldset"
  >
    <legend
      className="ds-c-label"
    >
      Does this person have costs directly attributable to this program?
    </legend>
    <ChoiceComponent
      checked={true}
      checkedChildren={
        <PersonCostForm
          costLabel="Cost with benefits"
          fteLabel="FTE Allocation"
          hint="For example: 0.5 = 0.5 FTE = 50% time"
          items={
            Object {
              "1992": Object {
                "amt": 100,
                "perc": 0.32,
              },
              "1993": Object {
                "amt": 300,
                "perc": 0.57,
              },
            }
          }
          setCost={[Function]}
          setFTE={[Function]}
        />
      }
      label="Yes"
      name="apd-state-profile-hascosts-yes0"
      onChange={[Function]}
      type="radio"
      value="yes"
    />
    <ChoiceComponent
      checked={false}
      label="No"
      name="apd-state-profile-hascosts-no0"
      onChange={[Function]}
      type="radio"
      value="no"
    />
  </fieldset>
</Fragment>
`;
